--- a/css/style.css
+++ b/css/style.css
@@ -8995,3 +8995,13 @@ textarea.form-control {
   100% {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
+
+/*@media(min-width:768px) {*/
+
+/*}*/
+/*@media(min-width:768px) {*/
+
+/*}*/
+/*@media(min-width:768px) {*/
+
+/*}*/
